# BreakHammer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  base_config.yaml  build.sh  check.txt  check_run_status.sh  docker_wrapper.sh  download_traces.py  execute_run_script.py  parse_results.sh  plot_all.sh  plot_all_figures.sh  plot_single.sh  podman_wrapper.sh  requirements.txt  run.sh  run_simple_test.sh  run_with_personalcomputer.sh  run_with_slurm.sh  run_with_slurm_docker.sh  run_with_slurm_podman.sh  setup_personal.py  setup_personalcomputer.py  setup_slurm.py  setup_slurm_docker.py  setup_slurm_podman.py
mixes/: microattack.mix  microbenign.mix
plotting_scripts/: figure10.py  figure11.py  figure12.py  figure13.py  figure14.py  figure2.py  figure7.py  figure8.py  figure9.py  plot_all.py  plot_setup.py
scripts/: calc_rh_parameters.py  mem_parser.py  result_parser.py  run_config.py  run_parser.py  run_processor.py
src/: main.cpp
src/base/: CMakeLists.txt  request.cpp  request.h  stacktrace.cpp  stacktrace.h
src/dram_controller/: CMakeLists.txt  bhcontroller.h  controller.h
src/dram_controller/impl/: bh_dram_controller.cpp  dummy_controller.cpp  generic_dram_controller.cpp  prac_dram_controller.cpp
src/dram_controller/impl/plugin/: aqua.cpp  bliss.cpp  blockhammer.cpp  cmd_dumper.cpp  dummy_mitigation.cpp  graphene.cpp  hydra.cpp  miss_tracker.cpp  miss_tracker.h  mithril.cpp  mithrilplus.h  panopticon.cpp  para.cpp  prac.cpp  prac.h  rfm_manager.cpp  rrs.cpp  silver_bullet.cpp  throttle_rega.cpp  throttle_rfm.cpp  throttleable.cpp  throttleable.h  throttler.cpp  twice.cpp
src/dram_controller/impl/pluginutil/: device_config.cpp  self_extending_counter.cpp  self_extending_counter.h  windowed_counter.cpp  windowed_counter.h
src/dram_controller/impl/rowpolicy/: basic_rowpolicies.cpp
src/dram_controller/impl/scheduler/: bh_scheduler.cpp  bliss_scheduler.cpp  blocking_scheduler.cpp  generic_scheduler.cpp  prac_scheduler.cpp
(+28 files in other folders)
